# ddcn

./: .hgignore  Benchmarks.md  Building.md  CMakeLists.txt  Configuration.md  Hacking.md  ProjectHome.md  README  README.txt  Running.md  Screenshots.md  TODO.md  Troubleshooting.md
ddcn_control/: CMakeLists.txt  Doxyfile  MainWindow.cpp  MainWindow.h  MainWindow.ui  OnlineGroupItemDelegate.cpp  OnlineGroupItemDelegate.h  OnlineGroupModel.cpp  OnlineGroupModel.h  OnlinePeerItemDelegate.cpp  OnlinePeerItemDelegate.h  OnlinePeerModel.cpp  OnlinePeerModel.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  icons.qrc  main.cpp
ddcn_control/icons/: license.txt
ddcn_crypto/: CMakeLists.txt  Certificate.cpp  Certificate.h  CertificateData.h  Doxyfile  PublicKey.cpp  PublicKey.h  PublicKeyData.cpp  PublicKeyData.h  TLS.cpp  TLS.h
ddcn_gcc/: Application.cpp  Application.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  Doxyfile  Job.cpp  Job.h  ServiceConnection.cpp  ServiceConnection.h  ddcn_g++  main.cpp
ddcn_service/: BootstrapConfig.cpp  BootstrapConfig.h  CMakeLists.txt  CompilerNetwork.cpp  CompilerNetwork.h  CompilerNetworkAdaptor.cpp  CompilerNetworkAdaptor.h  CompilerService.cpp  CompilerService.h  CompilerServiceAdaptor.cpp  CompilerServiceAdaptor.h  DBusStructs.cpp  DBusStructs.h  Doxyfile  GroupMembership.h  IncomingJob.h  IncomingJob.h~  InputOutputFilePair.cpp  InputOutputFilePair.h  Job.cpp  Job.h  JobAdaptor.cpp  JobAdaptor.h  JobRequest.cpp  JobRequest.h  LogWriter.cpp  LogWriter.h  McpoGroup.cpp  McpoGroup.h  NetworkInterface.cpp  NetworkInterface.h  NetworkNode.cpp  NetworkNode.h  NetworkStatus.h  NetworkStatusAdaptor.cpp  NetworkStatusAdaptor.h  NodeStatus.h  OnlinePeer.cpp  OnlinePeer.h  OutgoingJob.h  (+11 more)
ddcn_service/cmake/: FindAriba.cmake  FindLog4cxx.cmake  FindMCPO.cmake  FindQCA2.cmake
docs/: UserDocumentation.tex  UserDocumentation2.tex  dbus-interface.txt  ddcn_crypto.dia  ddcn_gcc.dia  ddcn_service.dia  roadmap.txt
docs/icon/: license.txt
docs/uml/: ddcn_gcc.dia  ddcn_service.dia
scripts/: build_toolchain.sh
